<resources>
    <string name="app_name">Cropool</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cropool">Cropool</string>
    <string name="cropool_intro">We take care of our planet by saving your money.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="FEEDBACK_DB_ERROR">Database error.</string>
    <string name="FEEDBACK_EMAIL_UNAVAILABLE">Entered e-mail unavailable.</string>
    <string name="FEEDBACK_CREDS_INVALID">Invalid credentials.</string>
    <string name="FEEDBACK_USER_REGISTERED">User registered.</string>
    <string name="FEEDBACK_USER_FOUND">User found.</string>
    <string name="FEEDBACK_USER_NOT_FOUND">User not found.</string>
    <string name="SHARED_PREFERENCES_NAME">SHAREDPREFERENCES</string>
    <string name="ACCESS_TOKEN_KEY_NAME">ACCESS_TOKEN</string>
    <string name="REFRESH_TOKEN_KEY_NAME">REFRESH_TOKEN</string>
    <string name="FIREBASE_TOKEN_KEY_NAME">FIREBASE_TOKEN</string>
    <string name="hello_blank_fragment">Hello world.</string>
    <string name="INPUT_ERROR_FIRST_NAME">Please enter your first name.</string>
    <string name="INPUT_ERROR_LAST_NAME">Please enter your last name.</string>
    <string name="INPUT_ERROR_EMAIL">Please enter a valid e-mail address.</string>
    <string name="INPUT_ERROR_PASSWORD">Please enter a valid password. It should contain uppercase letter, lowercase letter, special character, a number and [8, 64] characters without whitespaces.</string>
    <string name="INPUT_ERROR_PASSWORD_CONFIRM">Passwords do not match.</string>
    <string name="INPUT_ERROR_PASSWORD_MISSING">Please enter the password.</string>
    <string name="ACCESS_TOKEN_HEADER_KEY">access_token</string>
    <string name="REFRESH_TOKEN_HEADER_KEY">refresh_token</string>
    <string name="FIREBASE_TOKEN_HEADER_KEY">firebase_token</string>
    <string name="find_route">Find route</string>
    <string name="add_route">Add route</string>
    <string name="chat">Chat</string>
    <string name="my_account">My account</string>
    <string name="search">Search</string>
    <string name="name_surname">Name Surname</string>
    <string name="message_content">Message content…</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="FB_RTDB_E_MAIL_KEY">email</string>
    <string name="FB_RTDB_DISPLAY_NAME_KEY">name</string>
    <string name="FB_RTDB_PROFILE_PICTURE_KEY">profile_picture</string>
    <string name="FB_RTDB_DEFAULT_PICTURE_VALUE">DEFAULT</string>
    <string name="FB_RTDB_USER_TABLE_NAME">user</string>
    <string name="back_description">Back</string>
    <string name="online">Online</string>
    <string name="enter_your_message">Enter your message…</string>
    <string name="FB_RTDB_CONVERSATIONS_KEY">conversations</string>
    <string name="FB_RTDB_CHAT_TABLE_NAME">chat</string>
    <string name="FB_RTDB_CHAT_USER_1_KEY">user_1</string>
    <string name="FB_RTDB_CHAT_USER_2_KEY">user_2</string>
    <string name="FB_RTDB_CHAT_TEXTS_KEY">texts</string>
    <string name="FB_RTDB_CHAT_USER_1_SEEN_AT_KEY">user_1_seen_at</string>
    <string name="FB_RTDB_CHAT_USER_2_SEEN_AT_KEY">user_2_seen_at</string>
    <string name="FB_RTDB_CHAT_MESSAGE_KEY">message</string>
    <string name="FB_RTDB_CHAT_SENT_BY_KEY">sent_by</string>
    <string name="chat_time_placeholder">18:04</string>
    <string name="FB_RTDB_ACTIVE_CHAT_LABEL">ACTIVE</string>
    <string name="CHAT_ACTIVITY_INTENT_CONVERSATION_NAME">conversation</string>
    <string name="send_icon">Send icon.</string>
    <string name="other_user_message">Other user message.</string>
    <string name="sample_date_time">01-01-2000 01:01</string>
    <string name="current_user_message">Current user message.</string>
    <string name="HOME_ACTIVITY_NAVIGATION_EXTRA">navigation_item</string>
    <string name="FB_RTDB_LAST_SEEN_AT_KEY">last_seen_at</string>
    <string name="STATUS_ONLINE">Online</string>
    <string name="STATUS_LAST_SEEN_PREFIX">Last seen on</string>
    <string name="hi">Hi,</string>
    <string name="route_qty_sample">4</string>
    <string name="route_label">Routes</string>
    <string name="membership_time_sample">1 year</string>
    <string name="membership">Membership</string>
    <string name="manage_routes">Manage routes</string>
    <string name="routes_subscribed_to">Routes subscribed to</string>
    <string name="my_routes">My routes</string>
    <string name="personal_details">Personal details</string>
    <string name="help_support">Help and support</string>
    <string name="sign_out">Sign out</string>
    <string name="copyright">cropool©2022</string>
    <string name="routes_subscribed_to_icon">Routes subscribed to icon.</string>
    <string name="next_icon">Next icon.</string>
    <string name="personal_details_icon">Personal details icon.</string>
    <string name="help_and_support_icon">Help and support icon.</string>
    <string name="sign_out_icon">Sign out icon.</string>
    <string name="my_routes_icon">My routes icon.</string>
    <string name="TOKEN_HEADER_PREFIX">"Bearer "</string>
    <string name="n_a">N/A</string>
    <string name="update_account">Update account</string>
    <string name="update">Update</string>
    <string name="update_password">I want to update my password</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current_password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>
    <string name="CANNOT_BE_EMPTY">Field cannot be empty.</string>
    <string name="LOGOUT_FROM_ALL_DIALOG">Do you want to sign out from all devices?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="route_map">Route map.</string>
    <string name="route_created_on">Route created on 2/6/22 at 15:33.</string>
    <string name="route_schedule">Tuesdays at 2PM.</string>
    <string name="route_passengers">Passengers:</string>
    <string name="route_price_per_km">Price per kilometer:</string>
    <string name="route_driver">Driver:</string>
    <string name="route_edit">Edit</string>
    <string name="route_delete">Delete</string>
    <string name="PROFILE_PICTURE_RESOURCE">How do you want to update your profile picture?</string>
    <string name="DEVICE_IMAGES">Device images</string>
    <string name="CAMERA">Camera</string>
    <string name="create_a_new_route">Create a new route</string>
    <string name="current_password_label">Current password</string>
    <string name="starting_location">Starting location</string>
    <string name="finishing_location">Finishing location</string>
    <string name="my_route">My route</string>
    <string name="starting_and_finishing_location">Starting and finishing location</string>
    <string name="route_name">Route name</string>
    <string name="repetition_mode">Repetition mode</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="some_days">Some days</string>
    <string name="custom">Custom</string>
    <string name="start_time">Start time</string>
    <string name="start_day">Start day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="custom_repetition_note">Custom repetition note</string>
    <string name="e_g_every_even_date">E.g. every even date</string>
    <string name="max_number_of_passengers">Max number of passengers</string>
    <string name="price_per_kilometer">Price per kilometer (€)</string>
    <string name="monthly">Monthly</string>
    <string name="day_of_month">Start day of month</string>
    <string name="find_a_route">Find a route</string>
    <string name="starting_time_tolerance_minutes">Starting time tolerance (minutes)</string>
    <string name="routes">Routes</string>
    <string name="subscribe">Subscribe</string>
    <string name="UNSUBSCRIBE_CONFIRM">Are you sure you want to unsubscribe?</string>
    <string name="REMOVE_SUBSCRIPTION">Are you sure you want to remove this passenger\'s subscription?</string>
    <string name="from_rijeka_to_zagreb">From Rijeka to Zagreb</string>
    <string name="DECLINE_SUBSCRIPTION">Are you sure you want to decline this request?</string>
    <string name="default_notification_channel_id">notifications</string>
    <string name="REGISTRATION_TOKEN_KEY_NAME">REGISTRATION_TOKEN</string>
    <string name="channel_name">notifications</string>
    <string name="channel_description">channel for notifications</string>
</resources>
