<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.messages.ChatActivity">

    <RelativeLayout
        android:id="@+id/chat_info_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/back_description"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:src="@drawable/ic_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_profile_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/back"
            android:contentDescription="@string/profile_picture_description"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/chat_profile_picture"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/name_surname"
                android:textColor="@color/chat_list_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/online_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/online"
                android:textColor="@color/chat_list_name"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/send_message_relative_layout"
        android:layout_below="@id/chat_info_relative_layout" />

    <RelativeLayout
        android:id="@+id/send_message_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/chat_send_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.emoji2.widget.EmojiEditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/send"
            android:background="@drawable/round_background"
            android:hint="@string/enter_your_message"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/send_icon"
            android:src="@drawable/ic_send" />

    </RelativeLayout>
</RelativeLayout>